--- a/HaierOven/Cookbook/Views/Cookbook.storyboard
+++ b/HaierOven/Cookbook/Views/Cookbook.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C81f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -21,7 +21,7 @@
         <scene sceneID="REj-9c-pYz">
             <objects>
                 <tableViewController storyboardIdentifier="Cookbook detail controller" id="nCF-pj-vsv" customClass="CookbookDetailControllerViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="UTB-xh-HJr">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="UTB-xh-HJr">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -58,9 +58,9 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zQf-Zd-uEO">
-                                    <rect key="frame" x="212" y="201" width="100" height="42"/>
+                                    <rect key="frame" x="232" y="205.5" width="80" height="33"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="100" id="Z7w-n8-haI"/>
+                                        <constraint firstAttribute="width" constant="80" id="Z7w-n8-haI"/>
                                         <constraint firstAttribute="width" secondItem="zQf-Zd-uEO" secondAttribute="height" multiplier="12:5" id="w7d-ku-DWE"/>
                                     </constraints>
                                     <state key="normal" image="icon_follow.png">
@@ -110,7 +110,7 @@
                                                     </constraints>
                                                 </view>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="utr-qf-NeX">
-                                                    <rect key="frame" x="269" y="40" width="32" height="32"/>
+                                                    <rect key="frame" x="265" y="40" width="32" height="32"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="utr-qf-NeX" secondAttribute="height" multiplier="1:1" id="JMo-Ws-Xd5"/>
                                                     </constraints>
@@ -120,7 +120,7 @@
                                                     <state key="highlighted" image="icon_like_s.png"/>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Yb-bu-NIh">
-                                                    <rect key="frame" x="229" y="40" width="32" height="32"/>
+                                                    <rect key="frame" x="220" y="40" width="32" height="32"/>
                                                     <state key="normal" image="icon_share_n.png">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
@@ -144,21 +144,21 @@
                                                 <constraint firstItem="3Yb-bu-NIh" firstAttribute="centerY" secondItem="utr-qf-NeX" secondAttribute="centerY" id="2UL-pE-mWs"/>
                                                 <constraint firstItem="iSN-cF-wSK" firstAttribute="leading" secondItem="r9x-TH-QV9" secondAttribute="leading" constant="20" id="Blh-nL-vDh"/>
                                                 <constraint firstItem="3Yb-bu-NIh" firstAttribute="width" secondItem="utr-qf-NeX" secondAttribute="width" id="CQk-KO-Bf4"/>
-                                                <constraint firstAttribute="trailing" secondItem="utr-qf-NeX" secondAttribute="trailing" constant="19" id="Jgn-cj-JDw"/>
+                                                <constraint firstAttribute="trailing" secondItem="utr-qf-NeX" secondAttribute="trailing" constant="23" id="Jgn-cj-JDw"/>
                                                 <constraint firstItem="utr-qf-NeX" firstAttribute="top" secondItem="r9x-TH-QV9" secondAttribute="top" constant="40" id="LBj-xs-jiW"/>
                                                 <constraint firstItem="iSN-cF-wSK" firstAttribute="centerY" secondItem="2ST-Cq-DTt" secondAttribute="centerY" constant="-0.5" id="O5i-RS-dyY"/>
                                                 <constraint firstItem="2ST-Cq-DTt" firstAttribute="leading" secondItem="iSN-cF-wSK" secondAttribute="trailing" constant="8" id="TEA-eE-v69"/>
-                                                <constraint firstItem="utr-qf-NeX" firstAttribute="leading" secondItem="3Yb-bu-NIh" secondAttribute="trailing" constant="8" id="VbU-lP-Fmb"/>
+                                                <constraint firstItem="utr-qf-NeX" firstAttribute="leading" secondItem="3Yb-bu-NIh" secondAttribute="trailing" constant="13" id="VbU-lP-Fmb"/>
                                                 <constraint firstItem="3Yb-bu-NIh" firstAttribute="height" secondItem="utr-qf-NeX" secondAttribute="height" id="ZXu-wu-tqa"/>
                                                 <constraint firstItem="5Qz-0c-CFQ" firstAttribute="leading" secondItem="r9x-TH-QV9" secondAttribute="leadingMargin" constant="12" id="kFG-rL-isZ"/>
-                                                <constraint firstItem="3Yb-bu-NIh" firstAttribute="leading" secondItem="5Qz-0c-CFQ" secondAttribute="trailing" constant="20" id="t0t-b9-WBp"/>
+                                                <constraint firstItem="3Yb-bu-NIh" firstAttribute="leading" secondItem="5Qz-0c-CFQ" secondAttribute="trailing" constant="11" id="t0t-b9-WBp"/>
                                                 <constraint firstItem="iSN-cF-wSK" firstAttribute="top" secondItem="r9x-TH-QV9" secondAttribute="top" constant="10" id="uMS-JE-JpW"/>
                                                 <constraint firstAttribute="bottom" secondItem="utr-qf-NeX" secondAttribute="bottom" constant="19.5" id="yUT-ET-tZd"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="70" id="e9d-yT-7My">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="70" id="e9d-yT-7My" customClass="DescCell">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="e9d-yT-7My" id="pm4-0I-hCh">
@@ -181,7 +181,7 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="c82-Ad-rdX" id="idO-MH-XrF">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p3n-ws-fae">
+                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p3n-ws-fae">
                                                     <rect key="frame" x="18" y="7" width="285" height="31"/>
                                                     <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="16"/>
@@ -236,17 +236,17 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="plain" id="8YA-gB-0VK">
                             <view key="customView" hidden="YES" alpha="0.0" contentMode="scaleToFill" id="Npu-jC-DnP">
-                                <rect key="frame" x="154" y="5" width="120" height="33"/>
+                                <rect key="frame" x="204" y="5" width="90" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rc7-rg-sPB">
-                                        <rect key="frame" x="33" y="2" width="30" height="30"/>
+                                        <rect key="frame" x="8" y="2" width="30" height="30"/>
                                         <state key="normal" image="icon_share_navi_n.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="viA-hA-iiL">
-                                        <rect key="frame" x="80" y="2" width="30" height="30"/>
+                                        <rect key="frame" x="55" y="2" width="30" height="30"/>
                                         <state key="normal" image="icon_like_navi_n.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -283,14 +283,14 @@
         <image name="QQQ.png" width="480" height="640"/>
         <image name="back.png" width="26" height="26"/>
         <image name="fakedataImage.png" width="600" height="469"/>
-        <image name="icon_follow.png" width="62" height="26"/>
-        <image name="icon_gfcp_n.png" width="75" height="20"/>
-        <image name="icon_gfcp_s.png" width="75" height="20"/>
-        <image name="icon_like_n.png" width="24" height="24"/>
-        <image name="icon_like_navi_n.png" width="24" height="24"/>
+        <image name="icon_follow.png" width="93" height="39"/>
+        <image name="icon_gfcp_n.png" width="113" height="30"/>
+        <image name="icon_gfcp_s.png" width="113" height="30"/>
+        <image name="icon_like_n.png" width="48" height="48"/>
+        <image name="icon_like_navi_n.png" width="48" height="48"/>
         <image name="icon_like_s.png" width="26" height="26"/>
-        <image name="icon_share_n.png" width="24" height="24"/>
-        <image name="icon_share_navi_n.png" width="24" height="24"/>
+        <image name="icon_share_n.png" width="48" height="48"/>
+        <image name="icon_share_navi_n.png" width="48" height="48"/>
         <image name="mask_bottom.png" width="640" height="138"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
