--- a/HaierOven/AddFoodCell.xib
+++ b/HaierOven/AddFoodCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -14,7 +14,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="AddFoodCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="AddFoodCell" id="KGk-i7-Jjw" customClass="AddFoodCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -50,6 +50,9 @@
                                 <exclude reference="eZ3-Kv-Txh"/>
                             </mask>
                         </variation>
+                        <connections>
+                            <action selector="deleteFood:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="WSN-2O-4RE"/>
+                        </connections>
                     </button>
                 </subviews>
                 <constraints>
@@ -69,7 +72,7 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="delebtn" destination="Uui-7w-l42" id="bFe-vN-7zo"/>
+                <outlet property="deleteBtn" destination="Uui-7w-l42" id="QX6-4X-Gw6"/>
                 <outlet property="foodCountLabel" destination="iku-u4-HNR" id="NRm-gM-ugw"/>
                 <outlet property="foodLabel" destination="22z-EB-Mkg" id="63U-Oq-oJq"/>
             </connections>
